# fall-2025-a01-Herrywei0988

./: .gitignore  README.md  cars.py  gutenberg-top50.txt  missing.py  pyproject.toml  words.py
data/output/: audi.csv  descriptive.csv  hwy.csv
