[project]
name = "assignment-python-skills"
version = "0.1.0"
description = "Python skills assignment for data science students"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["*.py", "data", "solutions"]